--- a/video_salmonn/config/test.yaml
+++ b/video_salmonn/config/test.yaml
@@ -7,7 +7,8 @@ delta_ckpt_path: ./ckpt/MultiResQFormer/pytorch_model_4_5001.pt
 all_decode_info: [
   # ["audioimage", "image_input", "example_image.json"]
   # ["audio", "audio_input", "example_audio.json"]
-  ["audiovideoimage", "audiovideo_input", "example_video.json"]
+  # ["audiovideoimage", "audiovideo_input", "example_video.json"]
+  ["audio", "L1_LAQA","/share/nlp/tuwenming/projects/HAVIB/data/levels/level_1/LAQA/data.json"]
 ]
 
 stage: 2y
