--- a/video_salmonn/config/test.yaml
+++ b/video_salmonn/config/test.yaml
@@ -22,11 +22,11 @@ all_decode_info: [
 
     # # Level 3
     # ["audiovideoimage", "L3_AVH",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVH"],
-    ["audiovideoimage",      "L3_AVL",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVL"],
+    # ["audiovideoimage",      "L3_AVL",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVL"],
     # ["audiovideoimage", "L3_AVM",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVM"],
     # ["audiovideoimage",      "L3_AVR",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVR"],
     # ["audiovideoimage", "L3_VAH",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/VAH"],
-    # ["audiovideoimage",      "L3_VAR",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/VAR"],
+    ["audiovideoimage",      "L3_VAR",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/VAR"],
 
     # # Level 4
     # ["audiovideoimage", "L4_AVC",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_4/AVC"],
