--- a/video_salmonn/config/test.yaml
+++ b/video_salmonn/config/test.yaml
@@ -11,17 +11,17 @@ all_decode_info: [
 
 
 
-  # Level 1
-  ["audio",           "L1_LAQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_1/LAQA"],
-  ["audioimage",      "L1_LIQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_1/LIQA"],
-  ["audiovideoimage", "L1_LVQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_1/LVQA"],
+  # # Level 1
+  # ["audio",           "L1_LAQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_1/LAQA"],
+  # ["audioimage",      "L1_LIQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_1/LIQA"],
+  # ["audiovideoimage", "L1_LVQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_1/LVQA"],
 
-  # Level 2
-  ["audio",           "L2_MAIC", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_2/MAIC"],
-  ["audioimage",      "L2_MVIC", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_2/MVIC"],
+  # # Level 2
+  # ["audio",           "L2_MAIC", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_2/MAIC"],
+  # ["audioimage",      "L2_MVIC", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_2/MVIC"],
 
-  # Level 3
-  ["audiovideoimage", "L3_AVH",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVH"],
+  # # Level 3
+  # ["audiovideoimage", "L3_AVH",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVH"],
   ["audiovideoimage",      "L3_AVL",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVL"],
   ["audiovideoimage", "L3_AVM",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVM"],
   ["audiovideoimage",      "L3_AVR",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVR"],
