--- a/video_salmonn/config/test.yaml
+++ b/video_salmonn/config/test.yaml
@@ -8,7 +8,9 @@ all_decode_info: [
   # ["audioimage", "image_input", "example_image.json"]
   # ["audio", "audio_input", "example_audio.json"]
   # ["audiovideoimage", "audiovideo_input", "example_video.json"]
+  ["audiovideoimage", "L6_AVSQA_av", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_6/AVSQA_av"],
 
+  ["audiovideoimage", "L6_AVSQA_v", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_6/AVSQA_v"],
 
 
   # # Level 1
@@ -20,22 +22,22 @@ all_decode_info: [
   # ["audio",           "L2_MAIC", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_2/MAIC"],
   # ["audioimage",      "L2_MVIC", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_2/MVIC"],
 
-  # # Level 3
-  ["audiovideoimage", "L3_AVH",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVH"],
-  ["audiovideoimage",      "L3_AVL",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVL"],
-  # ["audiovideoimage", "L3_AVM",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVM"],
-  # ["audiovideoimage",      "L3_AVR",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVR"],
-  ["audiovideoimage", "L3_VAH",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/VAH"],
-  # ["audiovideoimage",      "L3_VAR",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/VAR"],
+  # # # Level 3
+  # ["audiovideoimage", "L3_AVH",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVH"],
+  # ["audiovideoimage",      "L3_AVL",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVL"],
+  # # ["audiovideoimage", "L3_AVM",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVM"],
+  # # ["audiovideoimage",      "L3_AVR",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/AVR"],
+  # ["audiovideoimage", "L3_VAH",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/VAH"],
+  # # ["audiovideoimage",      "L3_VAR",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_3/VAR"],
 
-  # # Level 4
-  ["audiovideoimage", "L4_AVC",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_4/AVC"],
-  ["audiovideoimage",      "L4_AVLG", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_4/AVLG"],
-  ["audiovideoimage", "L4_AVQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_4/AVQA"],
+  # # # Level 4
+  # ["audiovideoimage", "L4_AVC",  "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_4/AVC"],
+  # ["audiovideoimage",      "L4_AVLG", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_4/AVLG"],
+  # ["audiovideoimage", "L4_AVQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_4/AVQA"],
 
-  # # Level 5
-  ["audiovideoimage",      "L5_AVLG", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_5/AVLG"],
-  ["audiovideoimage", "L5_AVQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_5/AVQA"],
+  # # # Level 5
+  # ["audiovideoimage",      "L5_AVLG", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_5/AVLG"],
+  # ["audiovideoimage", "L5_AVQA", "/share/nlp/tuwenming/projects/HAVIB/data/levels/level_5/AVQA"],
 ]
 
 stage: 2y
